[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coinor.blimpy"
version = "2.0.1"
description = "Basic List Implementation in Python"
readme = "README.md"
license = { text = "Eclipse Public License" }
authors = [
    { name = "Aykut Bulut" },
    { name = "Ted Ralphs", email = "ted@lehigh.edu" },
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/tkralphs/BLImPy"
Documentation = "https://tkralphs.github.io/BLImPy"
Repository = "https://github.com/tkralphs/BLImPy"

[tool.setuptools]
packages = ["coinor", "coinor.blimpy"]

[tool.setuptools.package-dir]
"coinor" = "src"
"coinor.blimpy" = "src/blimpy"

[dependency-groups]
dev = [
    "pytest >= 8.0.0",
    "ruff >= 0.3.0",
]

[tool.pytest]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
